Fixed spacing below navbar, changed task font size to 16px.

--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 7rem;
+  padding-top: 2rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -125,6 +125,7 @@ p, div {
 
 .card-task {
   padding-left: 10px;
+  font-size: 16px;
 }
 
 div .card-header-inline {
